# homeotopy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  static.yml
docs/: conf.py
tests/: test_plane.py
typings/numba/: __init__.py
