[project]
name = "homeotopy"
version = "0.2.0"
description = "A library for computing homeomorphisms between some common stnandard topologie"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numba>=0.61.0"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "sphinx>=8.1.3",
]

[tool.setuptools]
packages = ["homeotopy"]
